--- a/monitoreo-service/src/main/resources/application.yml
+++ b/monitoreo-service/src/main/resources/application.yml
@@ -6,6 +6,6 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://eureka:8761/eureka/
     registerWithEureka: false
     #fetchRegistry: false
