--- a/zuul-gateway/src/main/resources/application.yml
+++ b/zuul-gateway/src/main/resources/application.yml
@@ -18,5 +18,5 @@ zuul:
 eureka: 
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://eureka:8761/eureka
         #registerWithEureka: false
